test/extended/util/compat_otp/testdata/router/awslb/awslbcontroller.yaml
kind: AWSLoadBalancerController
apiVersion: networking.olm.openshift.io/v1
metadata:
  name: cluster
spec:
  config:
    replicas: 1
  ingressClass: alb
  subnetTagging: Auto
