test/extended/util/compat_otp/testdata/router/awslb/subscription-src-qe-sts.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: aws-load-balancer-operator
  namespace: aws-load-balancer-operator
spec:
  channel: stable-v1
  config:
    env:
    - name: ROLEARN
      value: fakeARN-for-albo
  installPlanApproval: Automatic
  name: aws-load-balancer-operator
  source: qe-app-registry
  sourceNamespace: openshift-marketplace
